# actix_svelte_surreal

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  package-lock.json  package.json
client/: package-lock.json  package.json  vite.config.ts
client/src/routes/: Header.svelte  styles.css
client/src/routes/about/: +page.svelte
client/src/routes/todos/: +page.svelte
src/: lib.rs  main.rs  models.rs
